# bugal

./: .editorconfig  .gitignore  README.md  cli.py  kivy_gui.py  layout.kv  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.py  start.bat
bgl_venv/: pyvenv.cfg
bgl_venv/Scripts/: activate  activate.bat  garden  runxlrd.py  vba_extract.py
bugal/: __init__.py  abstract.py  bugal_orm.py  cfg.py  cli.py  config.py  config.toml  csv_adapter.py  csv_handler.py  exceptions.py  handler.py  helpers.py  model.py  mymain.py  new_temp.db  orm.py  repo.py  repo_adapter.py  service.py
bugal/libs/: handler.py
bugal_p/: config.toml  tickets.md
dev-doc/: info.md  uv.md
dev-doc/db/: alchemy.md  db_python.md  sql.md
dev-doc/git/: git_basics.md
djbgl/bugal/: manage.py
docs/: api.md  index.md  mvp.md  ug.md
docs/diagram/: Bugal-Diagram
docs/req/: 01_user.sdoc  goal.md  req.md  strictdoc.toml  template.sdoc
docs/test/: E2E.md
layer_venv/: pyvenv.cfg
layer_venv/Scripts/: activate  activate.bat  garden  get_gprof  get_objgraph  runxlrd.py  undill  vba_extract.py
src/: main.py
src/bugal/: service.py
src/cfg/: None  config.py  config.toml
src/libs/: exceptions.py  helpers.py
tests/: conftest.py  context.py
tests/e2e/: __init__.py  test_e2e.py
tests/fixtures/: archive_fx.py  basic.py  beta.test  beta2.test  classic.test  classic2.test  csv_fx.py  e2e_fx.py  fixtures.py  fx.py  fx_new_db_flie_name.db  model_fx.py  orm_fx.py  sql_fx.py
tests/layer/: test_service_api.py  test_ui_srvc.py
tests/unit/: context.py  fx_new_db_created  test_cli.py  (+9 more)
(+41 files in other folders)
