[project]
name = "bugal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2.17",
    "kivy>=2.3.0",
    "openpyxl>=3.1.5",
    "sqlalchemy>=2.0.36",
    "tomli>=2.1.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.1",
    "flake8>=7.1.1",
    "mkdoc>=0.1",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "strictdoc>=0.3.0",
]
lint = [
    "ruff>=0.8.3",
]
